# ProperNotepad

./: .gitignore  CMakeLists.txt  DEVELOPMENT_WORKFLOW.txt  README.md
.github/workflows/: build.yml
packaging/: propernotepad.desktop
src/: editortab.cpp  editortab.h  main.cpp  mainwindow.cpp  mainwindow.h
